FIX: Files#write always append line separator at the end of file.